# asutilities

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: SetPlatformDefines.cmake  SetTargetOptions.cmake
include/: AudioBuffer.hpp  AudioFormat.hpp  AudioFormatOptions.hpp  AudioFormatTypes.h  AudioFormatsManager.hpp  ConfigurationParser.h  DataStructureUtilities.h  MathUtilities.h  StringUtilities.h  UtilityClasses.h  asutilities.h
projects/xcode-mac/asutilities.xcodeproj/: project.pbxproj
samples/: CMakeLists.txt  af_converter.cpp
src/: AudioFormat_CoreAudio.cpp  AudioFormat_CoreAudio.hpp  AudioFormat_aac.cpp  AudioFormat_aac.hpp  AudioFormat_ogg.cpp  AudioFormat_ogg.hpp  AudioFormat_sndfile.cpp  AudioFormat_sndfile.hpp  AudioFormatsManager.cpp  stb_vorbis.c
test/: CMakeLists.txt  audioBufferTest.cpp  showAsbd.mm  test1.cpp
