CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT("af_converter")

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake_modules)
INCLUDE(SetTargetOptions)
INCLUDE(SetPlatformDefines)

SET_PLATFORM_DEFINES()
SET(compile_options "")

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/.." "asutilities")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../include/")

MESSAGE(STATUS ${DM_AUDIOMIDI_LINK_LIBS})

ADD_EXECUTABLE(af_converter "${CMAKE_CURRENT_SOURCE_DIR}/af_converter.cpp")
TARGET_LINK_LIBRARIES(af_converter asutilities ${ASUTILITIES_LINK_LIBS})
SET_TARGET_PROPERTIES(af_converter PROPERTIES LINK_FLAGS "${ASUTILITIES_LINK_FLAGS}")
FSET_TARGET_OPTIONS(af_converter "")

