CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

IF(DEFINED DM_AUDIOMIDI_TEST)
  SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dm-cmake)
  INCLUDE(SetTargetOptions)
  INCLUDE(SetPlatformDefines)

  SET_PLATFORM_DEFINES()
  SET(compile_options "")

  INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../include/")

  ENABLE_TESTING()
  ADD_EXECUTABLE(test1 "${CMAKE_CURRENT_SOURCE_DIR}/test1.cpp")
  TARGET_LINK_LIBRARIES(test1 dm-audiomidi)
  SET_TARGET_PROPERTIES(test1 PROPERTIES LINK_FLAGS "${DM_AUDIOMIDI_LINK_FLAGS}")
  FSET_TARGET_OPTIONS(test1 "")
  ADD_TEST(IdentityTest test1)
  ADD_CUSTOM_TARGET(check ${CMAKE_CTEST_COMMAND} -V DEPENDS test1)

ENDIF(DEFINED DM_AUDIOMIDI_TEST)

# This program is quite nice to have in the repo
# IF (APPLE)
#  ADD_EXECUTABLE(dm_show_asbd "${CMAKE_CURRENT_SOURCE_DIR}/showAsbd.mm")
#  SET_TARGET_PROPERTIES(dm_show_asbd PROPERTIES LINK_FLAGS "${DM_AUDIOMIDI_LINK_FLAGS} -framework Foundation")
# ENDIF(APPLE)


